View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033470 | Open CASCADE | OCCT:Application Framework | public | 2023-09-06 14:52 | 2023-09-25 12:47 |
Reporter | ika | Assigned To | ika | ||
Priority | normal | Severity | trivial | ||
Status | verified | Resolution | fixed | ||
Product Version | 7.7.1 | ||||
Target Version | 7.8.0 | ||||
Summary | 0033470: Application Framework - TDataStd_NamedData HasSmth() methods return true for empty containers. | ||||
Description | It is impossible to nullify internal arrays after removing the last named value, so HasSmth methods will return "true" even if the last value was removed and the container is empty. example: //! Returns true if there are some named strings in the attribute. Standard_Boolean HasStrings() const { return !myStrings.IsNull(); } It is proposed to add a check for emptiness to the HasSmth methods. | ||||
Steps To Reproduce | not needed | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR33470 has been created by ika. SHA-1: 86f2d821363ece57314c42a4c32bb1848c0ea1a2 Detailed log of new commits: Author: ika Date: Thu Sep 7 15:02:05 2023 +0100 0033470: Application Framework - TDataStd_NamedData HasSmth() methods return true for empty containers. Add checks for empty containers. |
|
Branch CR33470 has been updated forcibly by ika. SHA-1: 2ea58af166f1176a4dd35120500ae69d2ab90a27 |
|
Branch CR33470 has been updated forcibly by ika. SHA-1: 906702af2ade305461d7c914acdcdbb1a65ad91d |
|
Branch CR33470 has been updated forcibly by ika. SHA-1: 047295374368a6093930563756ff0d93e1858a0c |
|
Dear dpasukhi, please review the CR33470 branch. (The last update was a removal of extra empty line) test results: http://jenkins-test-10.nnov.opencascade.com/view/CR33470-master-ika/view/COMPARE/ |
|
Dear bugmaster, please integrate: OCCT: CR33470 PPOD: No |
|
Combination - OCCT branch : IR-2023-09-22 master SHA - 38581280d00c854dcc91e8d8284aeae08a289142 38e09ead3f71b0f6ee0ece13e05a6f9009c86eba Products branch : master SHA - c00d777bc21fca09e275ef4c9272442b9bd1caef was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Ubuntu2004-64: OCCT Total CPU difference: 18396.81000000019 / 18263.300000000214 [+0.73%] Products Total CPU difference: 12050.180000000018 / 12050.169999999993 [+0.00%] Windows-64-VC142: OCCT Total CPU difference: 19139.078125 / 18426.265625 [+3.87%] Products Total CPU difference: 14235.40625 / 13940.40625 [+2.12%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR33470 has been deleted by mnt. SHA-1: 047295374368a6093930563756ff0d93e1858a0c |
occt: master 4ce99d96 2023-09-07 17:02:05 Committer: jokwajeb Details Diff |
0033470: Application Framework - TDataStd_NamedData HasSmth() methods return true for empty containers. Add checks for empty containers. |
Affected Issues 0033470 |
|
mod - src/TDataStd/TDataStd_NamedData.cxx | Diff File | ||
mod - src/TDataStd/TDataStd_NamedData.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2023-09-06 14:52 | ika | New Issue | |
2023-09-06 14:52 | ika | Assigned To | => ika |
2023-09-07 17:02 | git | Note Added: 0114090 | |
2023-09-12 11:25 | dpasukhi | Target Version | Unscheduled => 7.8.0 |
2023-09-12 11:25 | dpasukhi | Description Updated | |
2023-09-14 14:55 | git | Note Added: 0114168 | |
2023-09-19 15:49 | git | Note Added: 0114188 | |
2023-09-22 14:04 | git | Note Added: 0114249 | |
2023-09-22 14:05 | ika | Status | new => resolved |
2023-09-22 14:05 | ika | Note Added: 0114250 | |
2023-09-22 14:12 | dpasukhi | Assigned To | ika => bugmaster |
2023-09-22 14:12 | dpasukhi | Status | resolved => reviewed |
2023-09-22 14:12 | dpasukhi | Note Added: 0114251 | |
2023-09-25 12:22 | jokwajeb | Note Added: 0114268 | |
2023-09-25 12:23 | jokwajeb | Changeset attached | => occt master 4ce99d96 |
2023-09-25 12:23 | ika | Assigned To | bugmaster => ika |
2023-09-25 12:23 | ika | Status | reviewed => verified |
2023-09-25 12:23 | ika | Resolution | open => fixed |
2023-09-25 12:47 | git | Note Added: 0114271 |