0033470: Application Framework - TDataStd_NamedData HasSmth() methods return true for empty containers.

Add checks for empty containers.